force-app/main/default/objects/Meeting_Console_Column_Picker__mdt/Meeting_Console_Column_Picker__mdt.object-meta.xml
<CustomObject>
    <label>Meeting Console Column Picker</label>
    <pluralLabel>Meeting_Console_Column_Pickers</pluralLabel>
</CustomObject>