force-app/main/default/objects/Meeting_Console_Column_Picker__mdt/fields/Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Hyperlink__c</fullName>
    <label>Hyperlink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>