force-app/main/default/objects/Meeting_Console_Column_Picker__mdt/fields/Tabset__c.field-meta.xml
<CustomField>
    <fullName>Tabset__c</fullName>
    <label>Tabset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>